--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql": "^16.8.0",
     "json-graphql-server": "^2.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.1",
